feat: upgrade possible dependencies and ensure plugin is working with minimal changes